--- a/src/components/common/Input/Input.scss
+++ b/src/components/common/Input/Input.scss
@@ -1,6 +1,12 @@
 .Input {
   &__field {
     outline: none; // @NOTE: ask design for desired behavior when user is focusing input field
+
+    &::placeholder {
+      letter-spacing: 1.5px;
+      color: #3e342b; // todo constants
+      opacity: 0.5;
+    }
   }
 
   &__clearButton {
