--- a/src/components/BalanceChecker/BalanceChecker.scss
+++ b/src/components/BalanceChecker/BalanceChecker.scss
@@ -1,10 +1,12 @@
 .BalanceChecker {
-  background: #efe6dd; // todo store in constants
-  border: 1px solid #000000; // todo store in constants
-  border-radius: 10px;
-  padding: 0 15px;
-
   max-width: 345px;
+
+  &__card {
+    background: #efe6dd; // todo store in constants
+    border: 1px solid #000000; // todo store in constants
+    border-radius: 10px;
+    padding: 0 15px;
+  }
 
   &__header {
     display: flex;
@@ -64,5 +66,14 @@
 
   &__errMsg {
     color: #ff4d00; // todo store in constants
+  }
+
+  .BalanceChecker__checkBtn {
+    margin-top: 15px;
+    background: #000000; // todo constants
+    height: 50px;
+
+    font-size: 16px;
+    color: white;
   }
 }
