--- a/src/components/common/Button/Button.scss
+++ b/src/components/common/Button/Button.scss
@@ -1,7 +1,15 @@
 .Button {
   cursor: pointer;
+  border-radius: 10px;
+  border: none;
+  outline: none; // @NOTE: ask design for desired behavior when user is focusing input field
 
+  // User feedback when clicking button
   &:active {
-    background: red; // todo user click feedback animation
+    background: red !important; // todo user click feedback animation
+  }
+
+  &--isFullWidth {
+    width: 100%;
   }
 }
