--- a/src/index.scss
+++ b/src/index.scss
@@ -5,12 +5,14 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+button {
   font-family: "Roboto", sans-serif;
 }
 
 p,
 span,
-div {
+div,
+input {
   font-family: "Roboto Mono", monospace;
 }
