--- a/src/components/common/Input/Input.scss
+++ b/src/components/common/Input/Input.scss
@@ -6,7 +6,7 @@
 
     &::placeholder {
       letter-spacing: 1.5px;
-      color: #3e342b; // todo constants
+      color: #3e342b;
       opacity: 0.5;
     }
   }
