--- a/src/index.scss
+++ b/src/index.scss
@@ -16,3 +16,10 @@ div,
 input {
   font-family: "Roboto Mono", monospace;
 }
+
+// Base colors
+$success: #1e7500;
+$danger: #ff4d00;
+
+// Theme colors
+$dwelling-theme-1: #efe6dd;
